Fixed nav align and maybe position for skip

--- a/css/style.css
+++ b/css/style.css
@@ -113,13 +113,13 @@ nav a:hover, nav a:focus {
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
 .skip a{
-  position:absolute;
+  position: absolute;
   top: -40px;
 }
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 .skip a:focus {
-  position:absolute;
+  position: absolute;
   top: 20px;
 }
 
@@ -193,7 +193,7 @@ first div in the grid  and place it in the grid. */
 
   /* Step 9: Write the selector/rule property to style the nav element */
   nav {
-    text-align: left;
+    text-align: right;
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 0px;
